...
                        painter = painterResource(R.drawable.ic_home_filled),
                        tint = AppColors.iconPrimary,
                        contentDescription = "Home Icon"
                    )
                    Spacer(modifier = Modifier.width(8.dp))
                    Text(
                        text = "Log.e",
                        style = AppTextStyles.JetBrain.Header2.copy(color = AppColors.white)
                    )
                }
                Spacer(modifier = Modifier.weight(1f))
                CustomButton(
                    modifier = Modifier.width(70.dp),
...
