...
            SettingSectionContainer {
                Column(
                    modifier = Modifier
                        .clickable { onAction(SettingAction.OnProfileClick) }
                        .padding(16.dp)
                ) {
                    SectionHeader(iconRes = R.drawable.ic_profile, title = "프로필")
                    Spacer(modifier = Modifier.height(12.dp))
                    Row(
                        modifier = Modifier
                            .fillMaxWidth(),
                        verticalAlignment = Alignment.CenterVertically
                    ) {
...
